--- a/conf/cmi/language/fi/views.view.media_library.yml
+++ b/conf/cmi/language/fi/views.view.media_library.yml
@@ -46,6 +46,8 @@ display:
             group_items:
               1:
                 title: Julkaistu
+              2:
+                title: Julkaisematon
         name:
           expose:
             label: Nimi
