--- a/conf/cmi/language/sv/eu_cookie_compliance.settings.yml
+++ b/conf/cmi/language/sv/eu_cookie_compliance.settings.yml
@@ -1,17 +1,11 @@
-popup_info:
-  value: '<h2>Vi använder cookies på denna webbplats för att förbättra din användarupplevelse</h2><p>Genom att klicka på knappen "acceptera" godkänner du att vi gör det.</p>'
-mobile_popup_info:
-  value: '<h2>Vi använder cookies på denna webbplats för att förbättra din användarupplevelse.</h2><p>Genom att trycka på knappen "acceptera" godkänner du att vi gör det.</p>'
 popup_agree_button_message: Accepterar
-popup_more_info_button_message: 'Mer information'
-disagree_button_label: 'Nej, tack'
-popup_agreed:
-  value: '<h2>Tack för att du accepterade cookies</h2><p>Nu kan du dölja det här meddelandet eller ta reda på mer om cookies.</p>'
-popup_find_more_button_message: 'Mer information'
+popup_more_info_button_message: 'Visa cookies'
+popup_find_more_button_message: 'Visa cookies'
 popup_hide_button_message: Dölj
-withdraw_message:
-  value: '<h2>Vi använder cookies på denna webbplats för att förbättra din användarupplevelse.</h2><p>Du har gett ditt samtycke för oss att ställa in cookies.</p>'
-withdraw_tab_button_label: Sekretessinställningar
+popup_info:
+  value: "<h2>Hel.fi använder cookies</h2><p>Vi använder viktiga cookies på vår webbplats för att få webbplatsen att fungera. Även tredjepartscookies används om du ger oss ditt tillstånd.</p>\r\n"
+disagree_button_label: 'Nej, tack'
 withdraw_action_button_label: 'Återkalla samtycke'
-save_preferences_button_label: 'Spara val'
+withdraw_tab_button_label: Sekretessinställningar
+save_preferences_button_label: 'Acceptera valda cookies'
 accept_all_categories_button_label: 'Acceptera alla cookies'
