Config exports before updates.

--- a/conf/cmi/language/fi/field.field.paragraph.contact_card.field_contact_image.yml
+++ b/conf/cmi/language/fi/field.field.paragraph.contact_card.field_contact_image.yml
@@ -1,1 +1,2 @@
 label: Kuva
+description: 'Use a square image for the best result. Portrait and landscape images will be cropped to a square, the focal point can be selected with the image upload.'
