--- a/conf/cmi/language/fi/views.view.service_list.yml
+++ b/conf/cmi/language/fi/views.view.service_list.yml
@@ -1,46 +1,41 @@
-label: Palvelulistaus
 display:
   default:
-    display_title: Oletus
+    display_title: Isäntä
     display_options:
       exposed_form:
         options:
           submit_button: Käytä
           reset_button_label: Palauta
           exposed_sorts_label: Lajittele
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Nousevasti
+          sort_desc_label: Laskevasti
       pager:
         options:
           tags:
-            previous: '‹ Edellinen'
-            next: 'Seuraava ›'
+            next: Seuraava
+            previous: Edellinen
+            first: Ensimmäinen
+            last: Viimeinen
           expose:
             items_per_page_label: 'Merkintöjä sivua kohti'
             items_per_page_options_all_label: '- Kaikki -'
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Lataa lisää palveluita'
-      fields:
-        name:
-          separator: ', '
-      empty:
-        area:
-          content:
-            value: 'Ei tuloksia'
       arguments:
         id:
           exception:
             title: Kaikki
-  block:
-    display_title: Lohko
-  entity_reference_1:
-    display_title: Entiteettiviittaus
+  block_search:
     display_options:
-      fields:
-        name_override:
-          separator: ', '
-        id:
-          separator: ', '
-        name:
-          separator: ', '
+      exposed_form:
+        options:
+          submit_button: Etsi
+      pager:
+        options:
+          tags:
+            previous: Edellinen
+            next: Seuraava
+      filters:
+        combine:
+          expose:
+            label: 'Neuvontapalvelun nimi tai hakusana'
+            placeholder: 'Esim. Sosiaalineuvonta, terveys tai digi'
