--- a/conf/cmi/language/fi/views.view.unit_services.yml
+++ b/conf/cmi/language/fi/views.view.unit_services.yml
@@ -7,19 +7,19 @@ display:
           submit_button: Käytä
           reset_button_label: Palauta
           exposed_sorts_label: Lajittele
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Nousevasti
+          sort_desc_label: Laskevasti
       pager:
         options:
           tags:
-            previous: '‹ Edellinen'
-            next: 'Seuraava ›'
+            next: Seuraava
+            previous: Edellinen
+            first: Ensimmäinen
+            last: Viimeinen
           expose:
             items_per_page_label: 'Merkintöjä sivua kohti'
             items_per_page_options_all_label: '- Kaikki -'
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Lataa lisää palveluita'
       arguments:
         id:
           exception:
