--- a/conf/cmi/language/sv/views.view.service_list.yml
+++ b/conf/cmi/language/sv/views.view.service_list.yml
@@ -1,45 +1,25 @@
 display:
   default:
-    display_title: Förvald
     display_options:
-      exposed_form:
-        options:
-          submit_button: Verkställ
-          reset_button_label: Återställ
-          exposed_sorts_label: 'Sortera efter'
-          sort_asc_label: Stigande
-          sort_desc_label: Fallande
       pager:
         options:
           tags:
-            previous: '‹ Föregående'
-            next: 'Nästa ›'
-          expose:
-            items_per_page_label: 'Inlägg per sida'
-            items_per_page_options_all_label: '- Alla -'
-            offset_label: Kompensera
-          views_infinite_scroll:
-            button_text: 'Ladda fler tjänster'
-      fields:
-        name:
-          separator: ', '
-      empty:
-        area:
-          content:
-            value: 'Inget resultat'
-      arguments:
-        id:
-          exception:
-            title: Alla
-  block:
-    display_title: Block
-  entity_reference_1:
-    display_title: Objektsreferens
+            next: Nästa
+            previous: Föregående
+            first: Första
+            last: Sista
+  block_search:
     display_options:
-      fields:
-        name_override:
-          separator: ', '
-        id:
-          separator: ', '
-        name:
-          separator: ', '
+      exposed_form:
+        options:
+          submit_button: Sök
+      pager:
+        options:
+          tags:
+            previous: Tidigare
+            next: Nästa
+      filters:
+        combine:
+          expose:
+            label: 'Rådgivningstjänstens namn eller sökterm'
+            placeholder: 't.ex. Socialrådgivning, hälsa eller digitalt Sök'
