Export translation related configs.

--- a/conf/cmi/language/sv/views.view.content.yml
+++ b/conf/cmi/language/sv/views.view.content.yml
@@ -7,7 +7,7 @@ display:
       title: Innehåll
       fields:
         title:
-          label: Titel
+          label: Title
         type:
           label: Innehållstyp
           separator: ', '
@@ -42,7 +42,7 @@ display:
       filters:
         title:
           expose:
-            label: Titel
+            label: Title
         type:
           expose:
             label: Innehållstyp
