--- a/conf/cmi/language/sv/views.view.glossary.yml
+++ b/conf/cmi/language/sv/views.view.glossary.yml
@@ -6,7 +6,7 @@ display:
     display_options:
       fields:
         title:
-          label: Titel
+          label: Title
         name:
           label: Författare
         changed:
