--- a/conf/cmi/language/sv/views.view.locked_units.yml
+++ b/conf/cmi/language/sv/views.view.locked_units.yml
@@ -7,7 +7,7 @@ display:
           label: Massuppdatera
           action_title: Åtgärd
         name:
-          label: Titel
+          label: Title
           separator: ', '
         name_1:
           label: 'Lås ägare'
@@ -38,6 +38,6 @@ display:
       filters:
         name:
           expose:
-            label: Titel
+            label: Title
   locked_units_block:
     display_title: Block
